# Metronome

./: ,gitattributes  .clang-format  .clang-tidy  .gitignore  .gitmodules  AccentPicker.qml  AudioRecorder.qml  CMakeLists.txt  DurationPicker.qml  MainWindowForm.ui.qml  Metronome.qml  README.md  TempoPicker.qml  TempoSettingsForm.ui.qml  UpDown.qml  audiorecordcontroller.cpp  audiorecordcontroller.hpp  contextobject.cpp  contextobject.hpp  main.cpp  main.qml  numbercontroller.cpp  numbercontroller.h  qml.qrc  tempocontroller.cpp  tempocontroller.h  tempocontroller.hpp  temposettingscontroller.cpp  temposettingscontroller.hpp  updowncontroller.cpp  updowncontroller.hpp
.github/workflows/: build.yml
components/: AccentPicker.qml  Metronome.qml  Settings.qml  TempoPicker.qml  TempoSettings.qml
core/: CMakeLists.txt  iconfigurable.cpp  iconfigurable.hpp
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt  global.hpp  iconfigurable.cpp  iconfigurable.hpp
lib/tempo/: CMakeLists.txt  tempo.cpp  tempo.hpp  tempodetector.cpp  tempodetector.hpp
plugins/: CMakeLists.txt
plugins/AudioAnalysis/: AudioRecorder.qml  CMakeLists.txt  audioanalysis.qrc  audioanalysisplugin.cpp  audioanalysisplugin.hpp  audiochart.cpp  audiochart.hpp  qmldir  tempodetector.cpp  tempodetector.hpp
plugins/Picker/: CMakeLists.txt  Picker.qml  PickerForm.ui.qml  picker.qrc  pickercontroller.cpp  pickercontroller.hpp  pickermodel.cpp  pickermodel.hpp  pickerplugin.cpp  pickerplugin.hpp  qmldir  tempo.cpp  tempo.hpp  tempocontroller.cpp  tempocontroller.hpp  temposettingscontroller.cpp  temposettingscontroller.hpp
plugins/Picker/DurationPicker/: CMakeLists.txt
plugins/Picker/TempoPicker/: CMakeLists.txt  TempoPicker.qml  numbercontroller.cpp  numbercontroller.h
plugins/Player/: CMakeLists.txt  Player.qml  PlayerForm.ui.qml  PlayerSettings.qml  PlayerSettingsForm.ui.qml  mixer.cpp  mixer.h  mixer.hpp  player.cpp  player.hpp  player.qrc  playerplugin.cpp  playerplugin.hpp  playersettingscontroller.cpp  playersettingscontroller.hpp  qmldir  soundstruct.cpp  soundstruct.h  soundthread.cpp
plugins/PlayerSettings/: CMakeLists.txt  PlayerSettings.qml  PlayerSettingsForm.ui.qml  playersettings.qrc  playersettingscontroller.cpp  playersettingscontroller.hpp  playersettingsplugin.cpp  playersettingsplugin.hpp  qmldir
plugins/Tapper/: CMakeLists.txt  Tapper.qml  TapperForm.ui.qml  TapperSettings.qml  inertia.cpp  inertia.hpp  qmldir  tapper.cpp  tapper.hpp  tapper.qrc  tapperplugin.cpp  tapperplugin.hpp  tappersettingscontroller.cpp  tappersettingscontroller.hpp
plugins/TapperSettings/: CMakeLists.txt  TapperSettings.qml  TapperSettingsForm.ui.qml  qmldir  tappersettings.qrc  tappersettingscontroller.cpp  tappersettingscontroller.hpp  tappersettingsplugin.cpp  tappersettingsplugin.hpp
plugins/TempoSettings/: CMakeLists.txt  TempoSettings.qml  qmldir  temposettings.qrc  temposettingscontroller.cpp  temposettingscontroller.hpp  temposettingsplugin.cpp  temposettingsplugin.hpp
plugins/UpDown/: CMakeLists.txt  UpDown.qml  UpDownForm.ui.qml  qmldir  updown.qrc  updowncontroller.cpp  updowncontroller.hpp  updownplugin.cpp  updownplugin.hpp
plugins/core/: CMakeLists.txt  global.hpp  iconfigurable.cpp  iconfigurable.hpp
plugins/mainwindow/: CMakeLists.txt  MainWindow.qml  MainWindowForm.ui.qml  mainplugin.cpp  mainplugin.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.qrc  qmldir
plugins/player/: CMakeLists.txt  Player.qml  PlayerForm.ui.qml  player.cpp  player.hpp  player.qrc  qmldir  soundthread.h
static/ideas/: functions.txt
tests/: CMakeLists.txt
tests/tempodetect/: CMakeLists.txt  test.qrc  tst_tempodetectiontestcase.cpp
