cmake_minimum_required(VERSION 3.14)

project(PickerPlugin LANGUAGES CXX)

include(GenerateExportHeader)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Quick REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick REQUIRED)

include_directories(${CMAKE_PROJECT_BINARY_DIR})

file(GLOB SOURCE_FILES
    ${PROJECT_SOURCE_DIR}/*.cpp)
file(GLOB HEADER_FILES
    ${PROJECT_SOURCE_DIR}/*.hpp)
file(GLOB RESOURCE_FILES
    ${PROJECT_SOURCE_DIR}/*.qrc)

qt5_add_resources(PLUGIN_RESOURCES ${RESOURCE_FILES})
set(PROJECT_SOURCES
    ${SOURCE_FILES}
    ${PLUGIN_RESOURCES}
    ${HEADER_FILES})

add_library(${PROJECT_NAME} SHARED ${PROJECT_SOURCES})

target_link_libraries(${PROJECT_NAME} PRIVATE
    Qt${QT_VERSION_MAJOR}::Core
    Qt${QT_VERSION_MAJOR}::Quick)

generate_export_header(${PROJECT_NAME} BASE_NAME PICKER_PLUGIN)

add_custom_command(
    TARGET ${PROJECT_NAME}
    POST_BUILD
    COMMAND
    ${CMAKE_COMMAND} -E copy
    ${CMAKE_CURRENT_LIST_DIR}/qmldir
    $<TARGET_FILE_DIR:${PROJECT_NAME}>/qmldir
)
